Source/WebCore/html/HTMLMediaElement.cpp
@@ -4579,6 +4579,11 @@ void HTMLMediaElement::mediaPlayerRenderingModeChanged(MediaPlayer*)
     invalidateStyleAndLayerComposition();
 }
 
+bool HTMLMediaElement::mediaPlayerAcceleratedCompositingEnabled()
+{
+    return document().settings() && document().settings()->acceleratedCompositingEnabled();
+}
+
 #if PLATFORM(WIN) && USE(AVFOUNDATION)
 
 GraphicsDeviceAdapter* HTMLMediaElement::mediaPlayerGraphicsDeviceAdapter(const MediaPlayer*) const
